# onnxruntime-ep-amdgpu

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  build.sh  requirements.txt
src/: CMakeLists.txt
src/amdgpu/: CMakeLists.txt  gpu_allocator.cc  gpu_allocator.h  gpu_data_transfer.cc  gpu_data_transfer.h  gpu_ep.cc  gpu_ep.h  gpu_ep_ctx.cc  gpu_ep_ctx.h  gpu_factory.cc  gpu_factory.h  gpu_info.cc  gpu_info.h  gpu_interop.cc  gpu_interop.h  gpu_options.h  gpu_stream_support.cc  gpu_stream_support.h  pyproject.toml
src/directml/: CMakeLists.txt  bias_gelu_ep_fusion.cc  bias_gelu_ep_fusion.h  cpu_allocator.h  dml_abi_custom_registry.cc  dml_abi_custom_registry.h  dml_abi_kernel.cc  dml_abi_kernel.cpp  dml_abi_kernel.h  dml_bucketized_buffer_allocator.cc  dml_bucketized_buffer_allocator.h  dml_client.h  dml_common.cc  dml_common.cpp  dml_common.h  dml_data_transfer.cc  dml_data_transfer.h  dml_ep.cc  dml_ep.h  dml_execution_context.cc  dml_execution_context.h  dml_execution_provider.cc  dml_execution_provider.cpp  dml_execution_provider.h  dml_factory.cc  dml_factory.h  dml_info.cc  dml_info.h  dml_op_translators.cc  dml_op_translators.h  dml_plugin_MLOperatorAuthorImpl.cc  dml_plugin_MLOperatorAuthorImpl.cpp  dml_plugin_MLOperatorAuthorImpl.h  dml_plugin_OperatorRegistration.cc  dml_plugin_OperatorRegistration.cpp  dml_plugin_OperatorRegistration.h  dml_plugin_command_recorder.cc  dml_plugin_command_recorder.cpp  dml_plugin_command_recorder.h  dml_pooled_upload_heap.cc  (+28 more)
src/directml/DmlExecutionProvider/: AbiCustomRegistry.h  AllocationInfo.h  ApiTraits.cc  BucketizedBufferAllocator.cc  BucketizedBufferAllocator.cpp  BucketizedBufferAllocator.h  CommandAllocatorRing.h  CommandQueue.cc  CommandQueue.cpp  CommandQueue.h  DescriptorPool.cc  DescriptorPool.cpp  DescriptorPool.h  DmlCommandRecorder.cc  DmlCommandRecorder.cpp  DmlCommandRecorder.h  DmlCommittedResourceAllocator.cc  DmlCommittedResourceAllocator.cpp  DmlCommittedResourceAllocator.h  DmlCommittedResourceWrapper.h  DmlCommon.cpp  DmlEdgeShapes.h  DmlExternalBufferAllocator.h  DmlGraphFusionHelper.cc  DmlGraphFusionHelper.cpp  DmlGraphFusionHelper.h  DmlGraphFusionTransformer.cc  DmlGraphFusionTransformer.cpp  DmlGraphFusionTransformer.h  DmlGraphSerialization.cc  DmlResourceWrapper.h  DmlReusedCommandListState.h  DmlRuntimeFusedGraphKernel.cc  DmlRuntimeFusedGraphKernel.cpp  DmlRuntimeFusedGraphKernel.h  DmlRuntimeGraphFusionTransformer.cc  DmlRuntimeGraphFusionTransformer.cpp  DmlRuntimeGraphFusionTransformer.h  DmlSubAllocator.h  ErrorHandling.h  (+32 more)
src/directml/DmlExecutionProvider/Operators/: DmlDFT.h  DmlGridSample.h  DmlOperator.cc  DmlOperator.cpp  DmlOperator.h  DmlOperatorActivation.cc  DmlOperatorAffine.cc  DmlOperatorAttention.cc  DmlOperatorBatchNormalization.cc  DmlOperatorBatchNormalization.cpp  DmlOperatorBiasAdd.cpp  DmlOperatorBiasGelu.cpp  DmlOperatorBiasSplitGelu.cc  DmlOperatorCast.cc  DmlOperatorCol2Im.cc  DmlOperatorConcat.cc  DmlOperatorConcat.cpp  DmlOperatorConcatFromSequence.cc  DmlOperatorConcatFromSequence.cpp  DmlOperatorConstantOfShape.cc  DmlOperatorConstantOfShape.cpp  DmlOperatorConvInteger.cc  DmlOperatorConvInteger.cpp  DmlOperatorConvolution.cc  DmlOperatorConvolution.cpp  DmlOperatorCopy.cpp  DmlOperatorCrop.cc  DmlOperatorCrop.cpp  DmlOperatorCumSum.cc  DmlOperatorCumSum.cpp  DmlOperatorDepthToSpace.cc  DmlOperatorDepthToSpace.cpp  DmlOperatorDynamicQuantizeLinear.cc  DmlOperatorDynamicQuantizeLinear.cpp  DmlOperatorDynamicQuantizeMatMul.cc  DmlOperatorDynamicQuantizeMatMul.cpp  DmlOperatorEinSum.cc  DmlOperatorEinSum.cpp  DmlOperatorElementWise.cc  DmlOperatorElementWise.cpp  (+81 more)
src/directml/DmlExecutionProvider/completed/: DmlCommon.h
src/directml/DmlExecutionProvider/inc/: DmlExecutionProvider.h  IWinmlExecutionProvider.h  MLOperatorAuthor.h
src/directml/OperatorAuthorHelper/: MLOperatorAuthorHelper.h  MLOperatorAuthorPrivate.h  OperatorHelper.cc  OperatorHelper.h  OperatorVersions.h  operator_helper_common.h  precomp.h
src/directml/core/common/: code_location.h  common.h  cpuid_info.cc  cpuid_info.h  cpuid_info_vendor.cc  cpuid_uarch.h  eigen_common_wrapper.h  exceptions.h  float16.h  float8.h  spin_pause.cc
src/directml/core/flatbuffers/: flatbuffers_utils.cc  flatbuffers_utils.h
src/directml/core/framework/: abi_safe_attr_utils.cc  abi_safe_attr_utils.h  alloc_kind.h  allocation_planner.cc  allocation_planner.h  allocator.cc  allocator.h  allocator_utils.cc  allocator_utils.h  bfc_arena.cc  bfc_arena.h  compute_capability.h  config_options.cc  config_options.h  copy.h  customregistry.cc  customregistry.h  data_transfer.cc  data_transfer.h  data_transfer_manager.cc  data_transfer_manager.h  data_transfer_utils.h  data_types.cc  data_types.h  data_types_internal.h  debug_node_inputs_outputs_utils.cc  device_stream_collection.cc  device_stream_collection.h  endian_utils.cc  endian_utils.h  ep_context_options.cc  ep_context_utils.cc  ep_context_utils.h  (+104 more)
src/hip/: CMakeLists.txt  hip_factory.cc
src/hipep/: CMakeLists.txt  hipep_factory.cc
src/migraphx/: CMakeLists.txt  mgx_dynamic_batch.cc  mgx_dynamic_batch.h  mgx_ep.cc  mgx_ep.h  mgx_ep_ctx.cc  mgx_ep_ctx.h  mgx_factory.cc  mgx_factory.h  mgx_hip_graph.cc  mgx_hip_graph.h  mgx_info.cc  mgx_info.h  mgx_interop.cc  mgx_interop.h  mgx_kernel_reg.cc  mgx_kernel_reg.h  mgx_options.h  mgx_utils.cc  mgx_utils.h  ort_trt_int8_cal_table.fbs.h  pyproject.toml
src/migraphx/kernels/: kernel.h  memcpy.cc  memcpy.h
src/shared/: CMakeLists.txt  version_script.lds
src/shared/common/: constants.h  dynamic_library.h  endian.h  enumerate.h  env_var.h  force_inline.h  helper.cc  make_string.h  murmurhash3.cc  murmurhash3.h  ort_graph_to_proto.cc  ort_graph_to_proto.h  parse_string.h  path_string.h  plugin_ep_utils.cc  plugin_ep_utils.h  provider_options.h  provider_options_utils.h  telemetry.cc  telemetry.h
src/shared/hip/: allocator.cc  allocator.h  data_transfer.cc  data_transfer.h  stream_support.cc  stream_support.h  utils.cc  utils.h
src/shared/tests/: telemetry_stress_test.cc
(+408 files in other folders)
