[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxruntime-ep-amdgpu"
version = "1.0.0"
description = "ONNX Runtime AMD GPU Umbrella Execution Provider"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "AMD" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://pypi.org/project/onnxruntime-ep-amdgpu/"
Repository = "https://github.com/onnxruntime/onnxruntime-ep-amdgpu"

[tool.setuptools.packages.find]
include = ["onnxruntime_ep_amdgpu*"]

[tool.setuptools.package-data]
onnxruntime_ep_amdgpu = ["*.dll", "*.so", "*.so.*", "*.pdb", "*.exe"]

[tool.ep]
module_name = "onnxruntime_ep_amdgpu"

[[tool.ep.components]]
library = "amdgpu-ep"
ep_name = "AMDGPUExecutionProvider"

[[tool.ep.components]]
library = "migraphx-backend"

[[tool.ep.components]]
library = "directml-backend"